<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- iphone_14___1 strings -->

    <string name="ek_img_content">ExportKit Image</string>
    <string name="login_string">Login</string>
    <string name="username__string">Username:</string>
    <string name="password__string">Password:</string>
    <string name="login_ek1_string">Login</string>
    <string name="app_name">My App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="keep_your_money_sweet_like_honey">Keep Your Money Sweet Like Honey!</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="register_now">register now!</string>

</resources>