<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textAlignment="center"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/enter_password"
        android:textAlignment="center"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:backgroundTint="#E17327"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:text="New to Wally? Click here to register here."
        android:textColor="@color/black"
        android:textAlignment="center"/>

</LinearLayout>
